--- a/dashboard-js/client/app/tasks/form-buttons/puttoworkbutton1Old.html
+++ b/dashboard-js/client/app/tasks/form-buttons/puttoworkbutton1Old.html
@@ -1,6 +1,5 @@
 <button ng-click="assignTask()"
-        class="btn btn-info"
-        style="background-color: #337ACF; outline: none; border: none"
+        class="btn btn-success"
         ng-disabled="isTaskSuccessfullySubmitted() || isTaskInProcess()"
         ng-show="selectedTask.assignee == null">Взяти в роботу
 </button>
