--- a/dashboard-js/client/index.html
+++ b/dashboard-js/client/index.html
@@ -114,6 +114,7 @@
           <script src="app/services/services.js"></script>
           <script src="app/task/baTask.controller.js"></script>
           <script src="app/task/task.js"></script>
+          <script src="app/tasks/clarify.directive.js"></script>
           <script src="app/tasks/dialogs/signInfoDialog.directive.js"></script>
           <script src="app/tasks/dialogs/signInfoDialogContent.directive.js"></script>
           <script src="app/tasks/form-buttons/printDialog.directive.js"></script>
@@ -123,6 +124,7 @@
           <script src="app/tasks/form-fields/enumField.directive.js"></script>
           <script src="app/tasks/form-fields/fieldTitle.directive.js"></script>
           <script src="app/tasks/form-fields/file.directive.js"></script>
+          <script src="app/tasks/form-fields/file.directiveOld.js"></script>
           <script src="app/tasks/form-fields/fileFormField.directive.js"></script>
           <script src="app/tasks/form-fields/marker.directive.js"></script>
           <script src="app/tasks/form-fields/simpleField.directive.js"></script>
